--- a/am_gazebo/CMakeLists.txt
+++ b/am_gazebo/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
   gazebo_plugins
   gazebo_ros
   gazebo_ros_control
+  joint_state_publisher
 )
 
 ## System dependencies are found with CMake's conventions
