--- a/am_description/CMakeLists.txt
+++ b/am_description/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(catkin REQUIRED COMPONENTS
   robot_state_publisher
   urdf
   xacro
+  hector_gazebo_plugins
 )
 
 ## System dependencies are found with CMake's conventions
