--- a/am_gazebo/package.xml
+++ b/am_gazebo/package.xml
@@ -50,6 +50,7 @@
   <run_depend>gazebo_plugins</run_depend>
   <run_depend>gazebo_ros</run_depend>
   <run_depend>gazebo_ros_control</run_depend>
+  <run_depend>joint_state_publisher</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
