Removed message generation from am_driver_legacy, made sure am_driver_safe generates srv first to avoid compilation error.

--- a/am_driver_safe/CMakeLists.txt
+++ b/am_driver_safe/CMakeLists.txt
@@ -115,7 +115,7 @@ add_executable(am_driver_safe_node
     src/hcp/hcp_tif.c
     src/hcp/hcp_vector.c
     src/hcp/amg3.c)
-add_dependencies(am_driver_safe_node am_driver_generate_messages_cpp)
+add_dependencies(am_driver_safe_node am_driver_generate_messages_cpp am_driver_safe_generate_messages_cpp)
 
 
 ## Add cmake target dependencies of the executable/library
