--- a/hq_decision_making_parser/CMakeLists.txt
+++ b/hq_decision_making_parser/CMakeLists.txt
@@ -1,39 +1,26 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(am_driver_safe)
-
-set(CMAKE_C_FLAGS "-std=c99 -DHCP_NOEXPORT -DHCP_EXPORT")
-set(CMAKE_CXX_FLAGS "-DHCP_NOEXPORT -DHCP_EXPORT -std=c++11 -DDISABLE_DECISION_MAKING_LOG")
-
-
+project(hq_decision_making_parser)
+ 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  hq_decision_making
-  hq_decision_making_parser
-  roscpp
-  std_msgs
-  geometry_msgs
-  sensor_msgs
-  nav_msgs
-  tf
-  am_driver
-  message_generation
-)
-
+  roscpp   
+)       
+      
 ## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
-
-
+find_package(Boost REQUIRED COMPONENTS system)
+      
+ 
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
 # catkin_python_setup()
-
-################################################
+   
+################################################ 
 ## Declare ROS messages, services and actions ##
-################################################
-
+################################################  
+ 
 ## To declare and build messages, services or actions from within this
 ## package, follow these steps:
 ## * Let MSG_DEP_SET be the set of packages whose message types you use in
@@ -53,16 +40,20 @@ find_package(catkin REQUIRED COMPONENTS
 ##     and list every .msg/.srv/.action file to be processed
 ##   * uncomment the generate_messages entry below
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
-
+ 
 ## Generate messages in the 'msg' folder
-#add_message_files(
-#  FILES
-#)
-
-add_service_files(
-  FILES
-  TifCmd.srv
-)
+# add_message_files( 
+#   FILES
+#   Message1.msg
+#   Message2.msg
+# )
+         
+## Generate services in the 'srv' folder
+# add_service_files(
+#   FILES
+#   Service1.srv
+#   Service2.srv
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -72,12 +63,10 @@ add_service_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
- generate_messages(
-   DEPENDENCIES
-   std_msgs
-   geometry_msgs
-   am_driver_safe
- )
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs  # Or other packages containing msgs
+# )
 
 ###################################
 ## catkin specific configuration ##
@@ -89,56 +78,61 @@ add_service_files(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
-#  LIBRARIES am_driver
-  CATKIN_DEPENDS roscpp std_msgs geometry_msgs sensor_msgs nav_msgs tf message_runtime am_driver
+#  INCLUDE_DIRS include
+#  LIBRARIES decision_making_parser
+	CATKIN_DEPENDS roscpp
 #  DEPENDS system_lib
-)
+	CFG_EXTRAS hq_decision_making_parser-extras.cmake 
+)  
 
 ###########
 ## Build ##
-###########
+########### 
 
+ 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 # include_directories(include)
-include_directories(include include/hcp ${catkin_INCLUDE_DIRS})
+include_directories(
+  ${catkin_INCLUDE_DIRS}
+) 
 
 ## Declare a cpp library
-# add_library(am_driver
-#   src/${PROJECT_NAME}/am_driver.cpp
+# add_library(decision_making_parser
+#   src/${PROJECT_NAME}/decision_making_parser.cpp
 # )
 
 ## Declare a cpp executable
-add_executable(am_driver_safe_node
-    src/am_driver_safe_node.cpp src/automower_safe.cpp src/automower_safe_states.cpp
-    src/hcp/cJSON.c
-    src/hcp/hcp_library.c
-    src/hcp/hcp_runtime.c
-    src/hcp/hcp_string.c
-    src/hcp/hcp_tif.c
-    src/hcp/hcp_vector.c
-    src/hcp/amg3.c)
 
 
-hq_decision_making_parsing(src/automower_safe_states.cpp)
+add_executable(hq_decision_making_parser
+	src/hq_Constructors.cpp
+	src/hq_decision_making_parser.cpp
+	src/hq_FSMConstructor.cpp
+	src/hq_Parsers_FSM.cpp
+	src/hq_FSMConstructor_for_Dot.cpp
+)
+ 
+ 
+              
+set(SRC_XML_PARSER "${CMAKE_CURRENT_SOURCE_DIR}/src/hq_xml_parser.py")
+message("  -- Source of Xml Parser location is ${SRC_XML_PARSER}")
 
-add_dependencies(am_driver_safe_node am_driver_generate_messages_cpp am_driver_safe_generate_messages_cpp)
-
+set( XMLPARSER "${CATKIN_DEVEL_PREFIX}/lib/${PROJECT_NAME}/hq_decision_making_xml_parser.py" ) 
+message("  -- Xml Parser location is ${XMLPARSER}")
+  
+FILE(READ "${SRC_XML_PARSER}" SRC_XML_PARSER_TEXT )
+FILE(WRITE "${XMLPARSER}" "${SRC_XML_PARSER_TEXT}" )
+ 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(am_driver_node am_driver_generate_messages_cpp)
-
-## Specify libraries to link a library or executable target against
-target_link_libraries(am_driver_safe_node
-  ${catkin_LIBRARIES}
-)
+# add_dependencies(decision_making_parser_node decision_making_parser_generate_messages_cpp)
 
 
 #############
 ## Install ##
 #############
-
+   
 # all install targets should use catkin DESTINATION variables
 # See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
 
@@ -150,7 +144,7 @@ target_link_libraries(am_driver_safe_node
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS am_driver am_driver_node
+# install(TARGETS decision_making_parser decision_making_parser_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -175,7 +169,7 @@ target_link_libraries(am_driver_safe_node
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_am_driver.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_decision_making_parser.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
