--- a/am_description/package.xml
+++ b/am_description/package.xml
@@ -46,7 +46,7 @@
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>urdf</run_depend>
   <run_depend>xacro</run_depend>
-  <run_depend>hector_gazebo_plugins</run_depend>
+  <!-- <run_depend>rviz</run_depend> --><!-- Required for the launchfile. -->
 
 
   <!-- The export tag contains other, unspecified, tags -->
