--- a/am_driver_safe/package.xml
+++ b/am_driver_safe/package.xml
@@ -48,6 +48,8 @@
   <build_depend>tf</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>am_driver</build_depend>
+  <build_depend>hq_decision_making</build_depend>
+  <build_depend>hq_decision_making_parser</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -56,6 +58,12 @@
   <run_depend>tf</run_depend>
   <run_depend>am_driver</run_depend>
   <run_depend>message_runtime</run_depend>
+  <!-- The following is required for the launchfile. -->
+  <run_depend>am_description</run_depend>
+  <run_depend>joint_state_publisher</run_depend>
+  <run_depend>robot_state_publisher</run_depend>
+  <!-- <run_depend>rqt_gui</run_depend> -->
+  
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
