--- a/am_driver_legacy/CMakeLists.txt
+++ b/am_driver_legacy/CMakeLists.txt
@@ -68,12 +68,12 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-#   geometry_msgs
-#   am_driver_legacy
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+  geometry_msgs
+  am_driver_legacy
+)
 
 ###################################
 ## catkin specific configuration ##
