--- a/am_gazebo_controller_2wd/CMakeLists.txt
+++ b/am_gazebo_controller_2wd/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(am_gazebo_controller_2wd)
-set(CMAKE_CXX_FLAGS "-std=c++11")
+add_compile_options(-std=c++11)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
@@ -104,12 +104,6 @@ include_directories(
   include
   ${catkin_INCLUDE_DIRS}
   ${GAZEBO_INCLUDE_DIRS}
-  am_gazebo_controller_2wd
-)
-
-link_directories(
-  ${GAZEBO_LIBRARY_DIRS}
-  ${OGRE_LIBRARY_DIRS}
 )
 
 ## Declare a cpp library
