--- a/hq_decision_making/CMakeLists.txt
+++ b/hq_decision_making/CMakeLists.txt
@@ -5,10 +5,11 @@ project(hq_decision_making)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  hq_robot_task
-  hq_decision_making_parser
+  actionlib
   diagnostic_updater
+  hq_decision_making_parser
+  hq_robot_task
+  roscpp
   std_msgs
 )
 
@@ -167,11 +168,10 @@ install(TARGETS hq_decision_making_ros
 )
 
 ## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+)
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES
