--- a/am_driver_safe/package.xml
+++ b/am_driver_safe/package.xml
@@ -43,6 +43,7 @@
   <build_depend>am_driver</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>hq_decision_making</build_depend>
+  <build_depend>hq_decision_making_parser</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
