--- a/am_gazebo/CMakeLists.txt
+++ b/am_gazebo/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(am_gazebo)
-set(CMAKE_CXX_FLAGS "-std=c++11")
+add_compile_options(-std=c++11)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
