--- a/am_gazebo_sensors/package.xml
+++ b/am_gazebo_sensors/package.xml
@@ -41,10 +41,12 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>am_driver</build_depend>
+  <build_depend>gazebo</build_depend>
   <build_depend>gazebo_msgs</build_depend>
   <build_depend>gazebo_ros</build_depend>
   <build_depend>roscpp</build_depend>
   <run_depend>am_driver</run_depend>
+  <run_depend>gazebo</run_depend>
   <run_depend>gazebo_msgs</run_depend>
   <run_depend>gazebo_ros</run_depend>
   <run_depend>roscpp</run_depend>
