--- a/hq_decision_making_parser/CMakeLists.txt
+++ b/hq_decision_making_parser/CMakeLists.txt
@@ -144,11 +144,11 @@ FILE(WRITE "${XMLPARSER}" "${SRC_XML_PARSER_TEXT}" )
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS decision_making_parser decision_making_parser_node
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+install(TARGETS hq_decision_making_parser
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark cpp header files for installation
 # install(DIRECTORY include/${PROJECT_NAME}/
