Fix more screwy dependency things, including leaking cmake variables.

--- a/am_bno055_gyro/CMakeLists.txt
+++ b/am_bno055_gyro/CMakeLists.txt
@@ -9,7 +9,7 @@ project(am_bno055_gyro)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   rospy
-  std_msgs
+  sensor_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -103,7 +103,7 @@ catkin_python_setup()
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES am_bno055_gyro
-#  CATKIN_DEPENDS rospy std_msgs
+   CATKIN_DEPENDS sensor_msgs
 #  DEPENDS system_lib
 )
 
@@ -157,10 +157,10 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+install(PROGRAMS
+  scripts/BNO055_publisher.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark executables and/or libraries for installation
 # install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
