Fixes #15: Missing dependencies on message generation.

--- a/am_driver_legacy/CMakeLists.txt
+++ b/am_driver_legacy/CMakeLists.txt
@@ -110,7 +110,7 @@ add_executable(am_driver_legacy_node src/am_driver_legacy_node.cpp src/automower
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(am_driver_node am_driver_generate_messages_cpp)
+add_dependencies(am_driver_legacy_node am_driver_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(am_driver_legacy_node
