Move magic constants for /cmd_mode to a message.
For compatibility the actual message sent is still a std_msgs/UInt16.

Also note that am_driver_legacy use a partially different (and
overlapping) set of values for /cmd_mode and thus this is not reflected
here.

--- a/am_driver/CMakeLists.txt
+++ b/am_driver/CMakeLists.txt
@@ -55,6 +55,7 @@ add_message_files(
     CuttingDiscStatus.msg
     Loop.msg
     LoopData.msg
+    Mode.msg
     MotorFeedback.msg
     MotorFeedbackDiffDrive.msg
     SensorStatus.msg
