Add a service to allow resetting PID errors.
This is useful when switching from velocity control to direct wheel
power control while the robot is in motion. Otherwise the error values
will remain when switching back to velocity control, which can result in
a jerking behaviour.

It is possible that the driver could be smarter and figure out when the
PID should be reset internally, however, doing it this way will avoid
breaking any existing code that could possibly depend on the current
behaviour.

--- a/am_driver_safe/CMakeLists.txt
+++ b/am_driver_safe/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   sensor_msgs
   std_msgs
+  std_srvs
   tf
 )
 
@@ -83,7 +84,8 @@ generate_messages()
 catkin_package(
   INCLUDE_DIRS include
 #  LIBRARIES am_driver
-  CATKIN_DEPENDS am_driver geometry_msgs message_runtime nav_msgs roscpp sensor_msgs std_msgs tf
+  CATKIN_DEPENDS
+    am_driver geometry_msgs message_runtime nav_msgs roscpp sensor_msgs std_msgs std_srvs tf
 #  DEPENDS system_lib
 )
 
